name:                krpc-hs
version:             1.1.0
description:         A client for KRPC
license:             GPL-3
license-file:        LICENSE
author:              Cahu
copyright:           2016 Cahu
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -Wall
  exposed-modules:     KRPCHS
                     , KRPCHS.SpaceCenter
                     , KRPCHS.InfernalRobotics
                     , KRPCHS.KerbalAlarmClock
                     , KRPCHS.Drawing
                     , KRPCHS.RemoteTech
                     , KRPCHS.UI
                     , KRPCHS.Internal.Requests
                     , KRPCHS.Internal.Requests.Call
                     , KRPCHS.Internal.Requests.Batch
                     , KRPCHS.Internal.Requests.Stream
                     , KRPCHS.Internal.ProtocolError
                     , KRPCHS.Internal.NetworkUtils
                     , KRPCHS.Internal.SerializeUtils
                     , PB.KRPC
                     , PB.KRPC.Argument
                     , PB.KRPC.ConnectionRequest
                     , PB.KRPC.ConnectionRequest.Type
                     , PB.KRPC.ConnectionResponse
                     , PB.KRPC.ConnectionResponse.Status
                     , PB.KRPC.Dictionary
                     , PB.KRPC.DictionaryEntry
                     , PB.KRPC.List
                     , PB.KRPC.ProcedureCall
                     , PB.KRPC.ProcedureResult
                     , PB.KRPC.Request
                     , PB.KRPC.Response
                     , PB.KRPC.Error
                     , PB.KRPC.Set
                     , PB.KRPC.Status
                     , PB.KRPC.Stream
                     , PB.KRPC.StreamResult
                     , PB.KRPC.StreamUpdate
                     , PB.KRPC.Tuple
  build-depends:       base >= 4.7 && < 5
                     , exceptions
                     , mtl
                     , network
                     , text
                     , bytestring
                     , containers
                     , protocol-buffers
                     , protocol-buffers-descriptor
  default-language:    Haskell2010


executable FlightRecorderCSV
    hs-source-dirs:      examples
    main-is:             FlightRecorderCSV.hs
    ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
    default-language:    Haskell2010
    build-depends:       base >= 4.7 && < 5
                       , krpc-hs
                       , exceptions
                       , mtl


executable KillRotation
    hs-source-dirs:      examples
    main-is:             KillRotation.hs
    ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
    default-language:    Haskell2010
    build-depends:       base >= 4.7 && < 5
                       , krpc-hs
                       , exceptions
                       , mtl


executable BatchExample
    hs-source-dirs:      examples
    main-is:             BatchExample.hs
    ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
    default-language:    Haskell2010
    build-depends:       base >= 4.7 && < 5
                       , krpc-hs


executable ListBiomes
    hs-source-dirs:      examples
    main-is:             ListBiomes.hs
    ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
    default-language:    Haskell2010
    build-depends:       base >= 4.7 && < 5
                       , krpc-hs
                       , mtl
